--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
+.baseSpan {
+  font-size: x-large;
+  font-family: monospace;
+}
+
 .nextLetter {
-  background-color: indigo;
-  color: white;
+  text-decoration: underline;
 }
 
 .incorrectLetter {
