track fixed letters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
 <input id="inputTextId" (keydown)="onKeydown($event)">
 <h1 *ngIf="wpm > -1">WPM: {{wpm}}</h1>
 <h2 *ngIf="errors > -1">Errors: {{errors}}</h2>
+<h2 *ngIf="fixedErrors > -1">Fixed Errors: {{fixedErrors}}</h2>
